Got hello and goodbye linked together

--- a/app/views/say/goodbye.html.erb
+++ b/app/views/say/goodbye.html.erb
@@ -1,2 +1,7 @@
-<h1>Say#goodbye</h1>
-<p>Find me in app/views/say/goodbye.html.erb</p>
+<h1>Goodbye!</h1>
+<p>
+It was very nice having you here
+</p>
+<p>
+	Say <a href="/say/hello" title="">Hello</a>
+</p>
