--- a/app/views/say/hello.html.erb
+++ b/app/views/say/hello.html.erb
@@ -1,6 +1,6 @@
 <h1>Hello from Rails!</h1>
 <p>
-	It is now <%= @time %>
+	Time in one hour: <%= 1.hour.from_now.localtime %>
 </p>
 <p>
 	Say <a href="/say/goodbye">Goodbye</a>
